# schoolware_api

./: .gitignore  README.md  punten-punt.txt  punten-vak.txt  punten.txt  pyproject.toml  setup.py  taken.txt
.github/workflows/: python-publish.yml
schoolware_api/: __init__.py  schoolware_api.py  tests.py
schoolware_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
