[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schoolware_api"
version = "0.0.5"
authors = [
  { name="MB", email="schoolware_api@mb-server.com" },
]
description = "A api for schoolware written in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests==2.25.1',
  'playwright==1.31.1',
]
[project.urls]
"Homepage" = "https://github.com/Maarten-buelens/schoolware_api"
"Bug Tracker" = "https://github.com/Maarten-buelens/schoolware_api/issues"